[gd_scene load_steps=12 format=2]

[ext_resource path="res://LevelElements/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://lights_and_backgrounds/light.png" type="Texture" id=2]
[ext_resource path="res://assets/Base pack/Player/p1_spritesheet.png" type="Texture" id=3]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 1

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 365, 98, 69, 71 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0.8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Area2D/CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0.8 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 67, 196, 66, 92 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Area2D/CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 438, 93, 67, 94 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 72, 97 ), Rect2( 73, 0, 72, 97 ), Rect2( 146, 0, 72, 97 ), Rect2( 0, 98, 72, 97 ), Rect2( 73, 98, 72, 97 ), Rect2( 146, 98, 72, 97 ), Rect2( 219, 0, 72, 97 ), Rect2( 292, 0, 72, 97 ), Rect2( 219, 98, 72, 97 ), Rect2( 365, 0, 72, 97 ), Rect2( 292, 98, 72, 97 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Area2D/CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=7]
radius = 32.0
height = 28.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 32.5
height = 28.0

[node name="Player" type="KinematicBody2D" groups=[
"environment",
"new_game",
"save",
]]
collision_layer = 8
collision_mask = 5
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.788235, 0.988235, 1, 1 )
scale = Vector2( 50000, 50000 )
z_index = -5
z_as_relative = false
texture = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../PlayerSprite")
anims/duck = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/walk = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.376274, -0.249153 )
shape = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 8 )

[node name="PlayerSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 72, 97 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
process_mode = 0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Light2D" type="Light2D" parent="."]
z_index = 4
texture = ExtResource( 2 )
texture_scale = 4.0
energy = 0.2
range_layer_min = -10
range_layer_max = 10
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_gradient_length = 1.0
shadow_filter = 1
shadow_filter_smooth = 2.0

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
